# basic-text-datagen

./: .gitignore  CMakeLists.txt  requirements.txt  setup.py  vcpkg-configuration.json  vcpkg.json
pytr/: __init__.py  path.py  renderer_ext.py  utils.py
src/: bindings.cc  bindings.cpp  common.h  freetype.cc  freetype.cpp  freetype.h  myfonts.cc  myfonts.h  owned_image.h  path.cpp  path.h  render.cc  render.cpp  render.h  shaper.cc  shaper.cpp  shaper.h
src/lib_opts/: common.h  freetype.cpp  freetype.h  skia.cpp  skia.h
